--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.10",
